# mdviewer

./: .prettierrc  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: build-and-release.yml  bump-version.yml  codeql.yml  dependency-audit.yml  release.yml
changelogs/: 0.4.md
scripts/: check-release-version.mjs
src/: App.css  App.tsx  index.css  lexical.css  main.tsx  markdown.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/features/app-shell/components/: AppMenus.tsx  AppOnboardingOverlay.tsx  AppPreviewArea.tsx  AppSidebar.tsx  AppWorkspace.tsx
src/features/app-shell/hooks/: useAppBootstrap.ts  useAppContextMenuRouter.ts  useAppKeyboardShortcuts.ts  useAppMenuActions.ts  useAppPersistence.ts  useFileWorkspace.ts  useFindAfterOpen.ts  useHeaderMenuActions.ts  useInitialLocations.ts  useNavigationHistory.ts  useOpenWith.ts
src/features/dnd/: DragLayer.tsx  MainDropOverlay.tsx  TreeDropBadge.tsx  deriveDropRenderHint.ts  dropTypes.ts  dropZoneResolver.ts  useAppDragDropController.ts  useFileDrop.ts  useInternalDrag.ts
src/features/outline/: outline.ts
src/features/preview/: domToMarkdown.ts  markdown.ts  markdownActions.ts  markdownDocument.ts  slug.ts
src/features/saved-locations/: savedLocations.ts
src/shared/hooks/: useThemeClass.ts
src/shared/state/: persistence.ts
src/shared/types/: files.ts
src/shared/utils/: path.ts
src/types/: markdown-it-task-lists.d.ts
(+88 files in other folders)
