[package]
name = "mdviewer"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Start a real native OS drag-and-drop operation OUT of the window, so explorer
# tree rows can be dragged into Windows Explorer / the desktop / other apps with
# actual files attached. Web drag events can't produce real file drops in
# WebView2; this triggers the platform's native drag (OLE on Windows).
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"

# Read the live Shift key state during an OS drag even when the window isn't
# focused (drags originating from another window). Windows-only; other platforms
# fall back to the webview's keyboard listener.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }

